style.css
@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');

html {
    font-family: "Inter", sans-serif;
    color: white;
    height: auto;
    width: 100%;
    overflow-x: hidden;
}

/* GRADIENT BY MANUEL PINTO https://codepen.io/P1N2O/pen/pyBNzX - Modified by me*/

body {
    background: linear-gradient(45deg, #04070a, #0a0f14, #1a2632, #060b0f);
    background-size: 400% 400%;
    animation: gradient 15s ease infinite;

    display: flex;
    flex-direction: column;
    margin: 0;
    height: 100vh;
    min-height: 100vh;
}

@keyframes gradient {
    0% {
        background-position: 0% 50%;
    }

    50% {
        background-position: 100% 50%;
    }

    100% {
        background-position: 0% 50%;
    }
}

/* GRADIENT BY MANUEL PINTO https://codepen.io/P1N2O/pen/pyBNzX - Modified by me*/

@media (max-width: 600px) {
    body {
        background: none !important; 
        background-size: cover !important;
        background-color: #060b0f !important;
        animation: none !important;
    }
}

main {
    flex: 1;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

main h1 {
    margin-top: 0;
    margin-bottom: 0;
    font-size: 100px;
    font-weight: bold;
    background: linear-gradient(to right, #00ffff, #ff9100);
    background-clip: text;
    color: transparent;
}

.about-me {
    margin-top: 0;
    margin-bottom: 40px;
    text-align: center;
    padding-inline: clamp(10px, 4vw, 10px);
    font-size: 18px;
    font-family: "Poppins", sans-serif;
}

@media (max-width: 600px) {
  .main-header {
    padding-top: 40px;
    text-align: center;
  }
}

footer {
    text-align: center;
    padding: 10px;
    background-color: rgba(0, 0, 0, 0.2);
}

@media (max-width: 600px) {
  footer {
    background-color: rgba(0, 0, 0, 0);
  }
}

.statuses {
    justify-content: center;
}

table {
    margin-left: auto;
    margin-right: auto;
    word-wrap: break-word;
    table-layout: fixed;
}

table th,
table td {
    padding: 8px;
    text-align: center;
}

.status-table tr {
    gap: 0px !important;
}

h2 {
    font-size: 40px;
    font-weight: bold;
    background: linear-gradient(to right, #00ffff, #ff9100);
    background-clip: text;
    color: transparent;
}

.other-stuff {
    width: 90%;
    max-width: 920px;
    text-align: left;
    margin: 1.5rem auto .1rem auto;
    background: linear-gradient(to left, #00ffff, #ff9100);
    background-clip: text;
    color: transparent;
    background-position: 50% 0%;
}

.projects,
.status-table {
    background-color: rgba(255, 255, 255, 0.1);
    border-radius: 10px;
    box-shadow: 0 4px 20px rgba(0, 0, 0, 0.3);
    transition: transform 0.3s ease-in-out;
}

.projects:hover,
.status-table:hover {
    transform: scale(1.02);
}

@media (max-width: 600px) {

    .projects,
    .status-table {
        width: 90% !important;
        margin: 0 auto;
        box-sizing: border-box;
    }
}

@media (max-width: 820px) {

    .projects,
    .status-table {
        width: 90% !important;
        margin: 0 auto;
        box-sizing: border-box;
    }
}

.project-text {
    margin-top: 25px;
}

.status-table {
    width: auto;
    display: flex;
    justify-content: center;
    align-items: center;
    gap: 16px;
    padding-top: 4px;
    padding-left: 4px;
    padding-right: 4px;
    flex-wrap: wrap;
}

.status-table tr {
    display: flex;
    flex-wrap: wrap;
    gap: 12px;
    align-items: center;
    justify-content: center;
}

.social-links {
    width: 90%;
    list-style: none;
    max-width: 950px;
    text-align: left;
    font-size: 18px;
}

.social-links li+li {
    border-top: 1px solid rgba(255, 255, 255, 0.15);
    padding-top: 8px;
}

@media (max-width: 600px) {
    .social-links {
        padding-left: 10px;
        padding-right: 10px;
    }
}

@media (max-width: 600px) {
  .status-table img {
    transform: scale(0.9);
  }
}

.social-links li {
    margin: 8px 0;
}

.social-links a {
    color: white;
    text-decoration: none;
    font-weight: 500;
    transition: 0.3s;
}

.social-links a:hover {
    opacity: 0.8;
}

.status-table img {
  max-width: 100%;
  height: auto;
}

td a {
    color: white;
    text-decoration: none;
    font-weight: 500;
    transition: 0.3s;
    font-size: 20px;
}

td a:hover {
    opacity: 0.8;
}

#discord-link.copied::after {
    content: " (copied!)";
    color: #ffffff;
    opacity: 50%;
    font-size: 0.9em;
}

.github-pages {
    color: rgb(35, 79, 255);
    font-size: 17px;
    text-decoration: none;
}

.font-awesome {
    color: rgb(35, 79, 255);
    font-size: 17px;
    text-decoration: none;
}

.stat-badges {
    color: rgb(35, 79, 255);
    font-size: 17px;
    text-decoration: none;
}

.web-source {
    color: rgb(35, 79, 255);
    font-size: 17px;
    text-decoration: none;
}

.jagar-link {
    color: rgb(255, 255, 255);
    font-size: 17px;
    text-decoration: none;
}

